<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.devdi.mapmories.login.LoginViewModel" />
        <variable
            name="activity"
            type="com.devdi.mapmories.login.LoginActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".login.LoginActivity">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo_imageview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_mapmories_logo" />

        <!-- Input Fields -->
        <LinearLayout
            android:id="@+id/edittext_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_imageview"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_id"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:background="@drawable/tv_rounded_edittext"
                    android:hint="@string/email"
                    android:padding="12dp"
                    android:text="@={viewModel.id}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:background="@drawable/tv_rounded_edittext"
                    android:hint="@string/password"
                    android:padding="12dp"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Find Credentials Text -->
            <TextView
                android:id="@+id/find_credentials_textview"
                android:onClick="@{() -> activity.findId()}"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="1dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif"
                android:gravity="end|center_vertical"
                android:paddingEnd="4dp"
                android:text="아이디 / 비밀번호 찾기"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Drawable Button (Independent) -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/independent_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/edittext_linearlayout"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_login"
            android:backgroundTint="@null"
            android:contentDescription="Email login button"
            android:onClick="@{()->viewModel.loginWithSignupEmail()}" />

        <!-- Line Separator with OR -->
        <LinearLayout
            android:id="@+id/line_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/independent_login_button"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Left Line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDDDDD" />

            <!-- OR Image -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/divider_or" />

            <!-- Right Line -->
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#DDDDDD" />
        </LinearLayout>

        <!-- Google Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/line_separator"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_signin_google"
            android:backgroundTint="@null"
            android:contentDescription="Google login button"
            android:onClick="@{(view)->viewModel.loginGoogle(view)}" />

        <!-- Facebook Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/google_login_button"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_signin_facebook"
            android:backgroundTint="@null"
            android:contentDescription="Facebook login button"
            android:text="@string/signin_facebook"
            android:textColor="@android:color/white"
            android:onClick="@{()->activity.loginFacebook()}" />

        <!-- Sign-Up Text -->
        <LinearLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/facebook_login_button"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dont_have_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textSize="19sp"
                android:textColor="#999999" />

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:paddingHorizontal="12dp"
                android:text="Sign up"
                android:textSize="19sp"
                android:textColor="#6200EE"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{()->viewModel.loginWithSignupEmail()}" />
        </LinearLayout>

    </RelativeLayout>
</layout>
